--- a/sandbox/locale/fr/LC_MESSAGES/django.po
+++ b/sandbox/locale/fr/LC_MESSAGES/django.po
@@ -8,11 +8,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-01-02 01:09+0100\n"
+"POT-Creation-Date: 2022-01-03 01:24+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -24,12 +24,12 @@ msgstr ""
 
 #: templates/skeleton.html:27
 msgid "Articles"
-msgstr ""
+msgstr "Articles"
 
 #: templates/skeleton.html:30
 msgid "Categories"
-msgstr ""
+msgstr "Catégories"
 
 #: templates/skeleton.html:33
 msgid "Authors"
-msgstr ""
+msgstr "Auteurs"
